fixed the overflow issue of note view mode

--- a/src/components/NoteEditor/index.css
+++ b/src/components/NoteEditor/index.css
@@ -1,7 +1,6 @@
 .note-editor {
   padding: 2rem;
   grid-area: main;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -29,9 +28,14 @@
 }
 .reading {
   height: 100%;
-  overflow: scroll;
+  position: relative;
 }
-.content {
+
+.reading .content {
+  overflow-y: scroll;
+  position: absolute;
+  top: 2rem;
+  bottom: 0;
 }
 
 .title {
@@ -65,7 +69,8 @@
 }
 .content-editing textarea {
   width: 100%;
-  height: 90%;
+  height: 94%;
+  line-height: 1.6rem;
   margin: 1rem 0;
   font-size: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
